Auto updating team sheet added

--- a/DreamLeague/Views/Shared/_Layout.cshtml
+++ b/DreamLeague/Views/Shared/_Layout.cshtml
@@ -121,30 +121,8 @@
 
     @RenderSection("scripts", required: false)
 
-    <script>
-        $(function () {
-            $('#global-search').autocomplete({
-                source: function (request, response) {
-                    $.ajax({
-                        url: "/Home/AutoComplete",
-                        type: "POST",
-                        dataType: "json",
-                        data: { prefix: request.term },
-                        success: function (data) {
-                            response($.map(data, function (item) {
-                                return item;
-                            }))
-                        }
-                    })
-                },
-                select: function (event, ui) {
-                    window.location.href = ui.item.val
-                },
-                messages: {
-                    noResults: "", results: ""
-                }
-            });
-        });
+    <script src="~/Scripts/global-search.js"></script>
+    <script>        
 
         (function (i, s, o, g, r, a, m) {
             i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
