--- a/DreamLeague/Views/Result/_CupResults.cshtml
+++ b/DreamLeague/Views/Result/_CupResults.cshtml
@@ -26,7 +26,7 @@
                                     }
                                     </td>
                                     <td>
-                                        @Html.ActionLink(fixture.HomeScore.Manager, "Details", "Manager", null, new { id = fixture.HomeScore.ManagerId })
+                                        @Html.ActionLink(fixture.HomeScore.Manager, "Details", "Manager", new { id = fixture.HomeScore.ManagerId }, null)
                                     </td>
                                     <td>
                                         @fixture.HomeScore.Margin
@@ -38,7 +38,7 @@
                                         @fixture.AwayScore.Margin
                                     </td>
                                     <td>
-                                        @Html.ActionLink(fixture.AwayScore.Manager, "Details", "Manager", null, new { id = fixture.AwayScore.ManagerId })
+                                        @Html.ActionLink(fixture.AwayScore.Manager, "Details", "Manager", new { id = fixture.AwayScore.ManagerId }, null)
                                     </td>
                                 </tr>
                             }
