--- a/DreamLeague/Views/Shared/_Layout.cshtml
+++ b/DreamLeague/Views/Shared/_Layout.cshtml
@@ -17,13 +17,13 @@
     @Scripts.Render("~/bundles/bootstrap")
     <script type='text/javascript' src='//cdn.jsdelivr.net/jquery.marquee/1.4.0/jquery.marquee.min.js'></script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-66368319-1"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-C35GGT2X1B"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag() { dataLayer.push(arguments); }
         gtag('js', new Date());
 
-        gtag('config', 'UA-66368319-1');
+        gtag('config', 'G-C35GGT2X1B');
     </script>
 </head>
 <body>
